--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,43 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+
+# Build outputs
+dist/
+dist-ssr/
+
+# Temporary files
 *.local
+.tmp/
+.cache/
+.vite/
+.vite-inspect/
+coverage/
+.env
+.env.*
+!.env.example
+
+# Bun
+bun.lockb
+
+# TypeScript
+*.tsbuildinfo
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS / Misc
+Thumbs.db
+Desktop.ini
+
